# carddav2ldap

./: .gitignore  DEVICES.md  Dockerfile  LICENSE  MAPPINGS.md  README.md  config.example.yaml  docker-compose.example.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: build.yml
src/carddav2ldap/: __main__.py  ber.py  carddav.py  config.py  ldap_server.py  mapping.py
src/carddav_to_ldap/: __main__.py  carddav.py  config.py  ldap_server.py  mapping.py
tests/: conftest.py  test_ber.py  test_carddav.py  test_config.py  test_ldap_server.py  test_mapping.py
