[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "carddav2ldap"
dynamic = ["version"]
description = "Bridge CardDAV contacts to an LDAP server for IP phones and other LDAP-only clients"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "vobject>=0.9.7",
    "pyyaml>=6.0",
]

[project.scripts]
carddav2ldap = "carddav2ldap.__main__:main"

[tool.setuptools.dynamic]
version = {file = "VERSION.txt"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
http3 = [
    "curl_cffi>=0.7",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]
